# otus-cpp-prof-hw-09-bulk-async

./: CMakeLists.txt  Doxyfile  annotated.html  async.cpp  async.h  async_8cpp.html  async_8h.html  async_8h__dep__incl.map  async_8h_source.html  bulk_async.cpp  classCollector-members.html  classCollector.html  classConcurrentQueue-members.html  classConcurrentQueue.html  classConsole-members.html  classConsole.html  classConsoleWriter-members.html  classConsoleWriter.html  classContextCollector-members.html  classContextCollector.html  classFileLogger-members.html  classFileLogger.html  classFileWriter-members.html  classFileWriter.html  classIWriter-members.html  classIWriter.html  classInterpreter-members.html  classInterpreter.html  classObservable-members.html  classObservable.html  classObserver-members.html  classObserver.html  classThreadsJoiner-members.html  classThreadsJoiner.html  classes.html  collector.cpp  collector.h  collector_8cpp.html  collector_8h.html  collector_8h__dep__incl.map  (+99 more)
.github/workflows/: release.yml
Interfaces/: interface_output.h  interface_writer.h
Observ/: observer.h
concurrent/: commands_queue.h  concurrent_queue.h
search/: all_0.js  all_1.js  all_13.js  all_7.js  all_e.js  all_f.js  classes_0.js  files_1.js  functions_1.js  functions_7.js  functions_d.js  functions_e.js  searchdata.js  typedefs_4.js
thread_writers/: thread_console_writer.cpp  thread_console_writer.h  thread_file_writer.cpp  thread_file_writer.h
